<resources>
    <string name="app_name">HomeWork1</string>
    <string name="textview">1.</string>
    <string name="textview2">2.</string>
    <string name="textview3">3.</string>
    <string name="textview4">4.</string>
    <string name="textview5">5.</string>
    <string name="textview6">6.</string>
    <string name="textview7">7.</string>
    <string name="textview8">8.</string>
    <string name="textview9">9.</string>
    <string name="textview10">10.</string>
</resources>